# READ2ME

./: "AI Hackfest Details".md  "Training Language Models".md  .env  .env.example  .gitattributes  .gitignore  .gitmodules  .lsfconfig  CHANGELOG.md  Chromium_Extension.crx  Chromium_Extension.pem  Ecolectro Hydrogen Revolution.md  Heroku Executive Departure.md  Invasive Species Disaster.md  Machine Learning Pseudo-Labels.md  README.md  Technology's Double Edge.md  The Perfect Cup.md  The Rise of Investing.md  The Wolfman Mythology.md  app.py  appstts2.py  bump_version.py  codebase.txt  dockerfile  feeds.json  hello.py  main.py  process_log.txt.2024-06-26  process_log.txt.2024-06-27  process_log.txt.2024-07-11  process_log.txt.2024-07-15  process_log.txt.2024-07-16  pyproject.toml  requirements.txt  requirements_F5.txt  requirements_fish.txt  requirements_outetts.txt  requirements_stts2.txt  requirements_styletts2.txt  (+7 more)
20240524/: 004.md
Chromium_Extension/: background.js  errorUtils.js  icon.ai  manifest.json  popup.html  popup.js  settings.html  settings.js
Chromium_Extension/Icon/: icon2.ai
Firefox_Extension/: background.js  manifest.json  popup.js  settings.js
TTS/: __init__.py  chatterbox.py  espeak_util.py  fish_test.py  outetts_test.py  podcast.py  setup_piper.py  tts_engines.py  tts_functions.py  tts_utils.py
TTS/F5_TTS/: F5.py
TTS/fish_speech/: inference.py
TTS/styletts2/: LICENSE  _run.py  ljspeechimportable.py  utils.py
TTS/styletts2_studio/: annotated_features.npy  inference.py  models.py  pca_model.pkl  random_voices.json  text2speech.py  text_utils.py  voices.json
TTS/voices/: Female_1_EN_US.npy  Female_1_EN_US.txt  Female_2_EN_US.npy  Female_2_EN_US.txt  Female_3_EN_US.npy  Female_3_EN_US.txt  Female_4_EN_US.npy  Female_5_EN_US.npy  (+16 more)
database/: __init__.py  crud.py  database.py  dbhelper.py  markdown_batch.py  migration.py  models.py  state.py
frontend/: .env.local.example  env.d.ts  globals.css  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
llm/: DSPy_call.py  LLM_calls.py  Local_Ollama.py  Local_OpenAI.py  Prompts.py  __init__.py  prompts.json  text_processing.py
setup/: setup_llama_cpp.py
styletts2/: .gitignore  _run.py  ljspeechimportable.py
utils/: F5_TTS.py  bsky_feeds.py  codebase.txt  common_enums.py  common_utils.py  crawl.py  crawlwebsite.py  edge_voices.py  env.py  file_utils.py  history_handler.py  html_fetcher.py  image_utils.py  instalpipertts.py  logging_utils.py  markdown_utils.py  parler.py  paywall_detector.py  pdfextraction.py  piper_tts_client.py  piper_tts_say.py  rssfeed.py  scrape.py  search.py  source_manager.py  sources.py  synthesize.py  synthesize_piper.py  synthesize_styletts2.py  synthesize_text.py  task_file_handler.py  task_processor.py  task_processor.py.new  text_extraction.py  text_processor.py  textscore.py  transcribe.py  url_processing.py  urltest.py  version_check.py  (+2 more)
(+160 files in other folders)
